tdf#61901 RTF export: fix implicit font name of non-ascii text

The problem was that in case we used \loch, then \f only had an affect
on ascii characters, not on every other character range.

Change-Id: I30a851fe28131f18f5c429273a24c1424d2cec22
Reviewed-on: https://gerrit.libreoffice.org/27310
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 43e049c32302620bbc134732286529496853d78a)